--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #F73859;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #f35f55;
+  background: #F73859;
   color: #fff;
   padding: 4px 20px;
   display: -moz-inline-stack;
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6, figure {
   border-radius: 4px;
 }
 .fh5co-nav ul li.btn-cta a:hover span {
-  background: #f14034 !important;
+  background: #F73859 !important;
   -webkit-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
