--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@ body{
     /* background: url(white.jpeg) no-repeat; */
     background-size: cover;
 }
-.login-box{
+.login-box, .register-box{
     width: 400px !important;
     position:absolute;
     top: 50%;
@@ -21,6 +21,18 @@ body{
     -webkit-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
     -moz-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
     box-shadow: 15px 30px 30px 0px rgba(0, 0, 0, 0.75) !important;
+}
+.register-box{
+    padding-bottom: -50px;
+}
+.register-box h1{
+    color: white;
+    float: left;
+    font-size: 30px;
+    border-bottom: 6px solid;
+    margin-bottom: 20px;
+    padding: 13px;
+
 }
 .login-box h1{
     color: white;
@@ -95,7 +107,20 @@ input::placeholder{
         background-color: rgb(46,54,85);
         
     }
-    .login-box{
+    .login-box,.register-box{
+        -webkit-box-shadow: none !important;
+        -moz-box-shadow: none !important;
+        box-shadow: none !important;
+    }
+}
+
+@media screen and (max-width: 480px){
+    body{
+        background-color: rgb(46,54,85);
+        
+    }
+    .login-box,.register-box{
+        width: 90%wq;
         -webkit-box-shadow: none !important;
         -moz-box-shadow: none !important;
         box-shadow: none !important;
