--- a/css/login.css
+++ b/css/login.css
@@ -8,6 +8,10 @@ body{
     /* background: url(white.jpeg) no-repeat; */
     background-size: cover;
 }
+
+#finalRegister4B{
+    display: none;
+}
 .login-box, .register-box{
     width: 400px !important;
     position:absolute;
@@ -42,6 +46,12 @@ body{
     margin-bottom: 50px;
     padding: 13px;
 }
+.login_text, .register_text{
+    color: rgba(247,56,89);
+    font-size: 12px;
+    padding: -10px 0px;
+    margin: -10px 0px;
+}
 .textbox{
     width: 100%;
     overflow: hidden;
@@ -67,14 +77,14 @@ body{
 }
 .btn{
     width: 100%;
-    background: none;
+    /* background: none; */
     border: 2px;
     border-radius: 10px;
     color: #fff;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
-    margin: 12px 0;
+    margin: 20px 0;
     background-color: rgba(247,56,89,.5);
     transition: 0.5s ease-in-out;
 }
