--- a/css/login.css
+++ b/css/login.css
@@ -8,10 +8,14 @@ body{
     /* background: url(white.jpeg) no-repeat; */
     background-size: cover;
 }
-
-#finalRegister4B{
-    display: none;
+.textbox input:-internal-autofill-selected{
+    background-color: rgb(46,54,85) !important;
+    color: #fff !important;
 }
+
+/* #finalRegister4B{
+    display: none;
+} */
 .login-box, .register-box{
     width: 400px !important;
     position:absolute;
@@ -27,14 +31,15 @@ body{
     box-shadow: 15px 30px 30px 0px rgba(0, 0, 0, 0.75) !important;
 }
 .register-box{
-    padding-bottom: -50px;
+    padding: 10px 40px;
 }
+
 .register-box h1{
     color: white;
     float: left;
     font-size: 30px;
     border-bottom: 6px solid;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     padding: 13px;
 
 }
@@ -98,17 +103,17 @@ input::placeholder{
     background-color: rgba(247,56,89,1);
 }
 
-.back-btn{
-    margin: 10px;
-    padding: 10px;
-    width: 50px;
+.bk-btn{
+    margin: 10px !important;
+    padding: 10px !important;
+    width: 50px !important;
 }
-.back-btn svg{
-    fill: rgba(46, 54, 85, 0.5);
+.bk-btn svg{
+    fill: rgba(46, 54, 85, 0.5) !important;
 }
 
-.back-btn svg:hover   {
-    fill: rgb(46,54,85);
+.bk-btn svg:hover   {
+    fill: rgb(46,54,85) !important;
     /* fill: rgb(247,56,89); */
 }
 
@@ -125,6 +130,9 @@ input::placeholder{
 }
 
 @media screen and (max-width: 480px){
+    .bk-btn{
+        display: none;
+    }
     body{
         background-color: rgb(46,54,85);
         
