--- a/css/login.css
+++ b/css/login.css
@@ -1,152 +1,433 @@
-@import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
-body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    /* background: url(./white.jpeg); */
-    background-color: #F0F5F9;
-    /* background: url(white.jpeg) no-repeat; */
-    background-size: cover;
+@charset "UTF-8";
+@import 'https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css';
+
+/*!
+ * animate.css - https://animate.style/
+ * Version - 4.1.0
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ *
+ * Copyright (c) 2020 Animate.css
+ */
+:root {
+	--animate-duration: 1s;
+	--animate-delay: 1s;
+	--animate-repeat: 1;
 }
-.textbox input:-internal-autofill-selected{
-    background-color: rgb(46,54,85) !important;
-    color: #fff !important;
+.animate__animated {
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-duration: var(--animate-duration);
+	animation-duration: var(--animate-duration);
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+.animate__animated.animate__infinite {
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+}
+.animate__animated.animate__repeat-1 {
+	-webkit-animation-iteration-count: 1;
+	animation-iteration-count: 1;
+	-webkit-animation-iteration-count: var(--animate-repeat);
+	animation-iteration-count: var(--animate-repeat);
+}
+.animate__animated.animate__repeat-2 {
+	-webkit-animation-iteration-count: calc(1 * 2);
+	animation-iteration-count: calc(1 * 2);
+	-webkit-animation-iteration-count: calc(var(--animate-repeat) * 2);
+	animation-iteration-count: calc(var(--animate-repeat) * 2);
+}
+.animate__animated.animate__repeat-3 {
+	-webkit-animation-iteration-count: calc(1 * 3);
+	animation-iteration-count: calc(1 * 3);
+	-webkit-animation-iteration-count: calc(var(--animate-repeat) * 3);
+	animation-iteration-count: calc(var(--animate-repeat) * 3);
+}
+.animate__animated.animate__delay-1s {
+	-webkit-animation-delay: 1s;
+	animation-delay: 1s;
+	-webkit-animation-delay: var(--animate-delay);
+	animation-delay: var(--animate-delay);
+}
+.animate__animated.animate__delay-2s {
+	-webkit-animation-delay: calc(1s * 2);
+	animation-delay: calc(1s * 2);
+	-webkit-animation-delay: calc(var(--animate-delay) * 2);
+	animation-delay: calc(var(--animate-delay) * 2);
+}
+.animate__animated.animate__delay-3s {
+	-webkit-animation-delay: calc(1s * 3);
+	animation-delay: calc(1s * 3);
+	-webkit-animation-delay: calc(var(--animate-delay) * 3);
+	animation-delay: calc(var(--animate-delay) * 3);
+}
+.animate__animated.animate__delay-4s {
+	-webkit-animation-delay: calc(1s * 4);
+	animation-delay: calc(1s * 4);
+	-webkit-animation-delay: calc(var(--animate-delay) * 4);
+	animation-delay: calc(var(--animate-delay) * 4);
+}
+.animate__animated.animate__delay-5s {
+	-webkit-animation-delay: calc(1s * 5);
+	animation-delay: calc(1s * 5);
+	-webkit-animation-delay: calc(var(--animate-delay) * 5);
+	animation-delay: calc(var(--animate-delay) * 5);
+}
+.animate__animated.animate__faster {
+	-webkit-animation-duration: calc(1s / 2);
+	animation-duration: calc(1s / 2);
+	-webkit-animation-duration: calc(var(--animate-duration) / 2);
+	animation-duration: calc(var(--animate-duration) / 2);
+}
+.animate__animated.animate__fast {
+	-webkit-animation-duration: calc(1s * 0.8);
+	animation-duration: calc(1s * 0.8);
+	-webkit-animation-duration: calc(var(--animate-duration) * 0.8);
+	animation-duration: calc(var(--animate-duration) * 0.8);
+}
+.animate__animated.animate__slow {
+	-webkit-animation-duration: calc(1s * 2);
+	animation-duration: calc(1s * 2);
+	-webkit-animation-duration: calc(var(--animate-duration) * 2);
+	animation-duration: calc(var(--animate-duration) * 2);
+}
+.animate__animated.animate__slower {
+	-webkit-animation-duration: calc(1s * 3);
+	animation-duration: calc(1s * 3);
+	-webkit-animation-duration: calc(var(--animate-duration) * 3);
+	animation-duration: calc(var(--animate-duration) * 3);
+}
+@media print, (prefers-reduced-motion: reduce) {
+	.animate__animated {
+		-webkit-animation-duration: 1ms !important;
+		animation-duration: 1ms !important;
+		-webkit-transition-duration: 1ms !important;
+		transition-duration: 1ms !important;
+		-webkit-animation-iteration-count: 1 !important;
+		animation-iteration-count: 1 !important;
+	}
+
+	.animate__animated[class*='Out'] {
+		opacity: 0;
+	}
+}
+
+.animate__animated.animate__flip {
+	-webkit-backface-visibility: visible;
+	backface-visibility: visible;
+	-webkit-animation-name: flip;
+	animation-name: flip;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	/* background: url(./white.jpeg); */
+	background-color: #f0f5f9;
+	/* background: url(white.jpeg) no-repeat; */
+	background-size: cover;
+}
+.textbox input:-internal-autofill-selected {
+	background-color: rgb(46, 54, 85) !important;
+	color: #fff !important;
 }
 
 /* #finalRegister4B{
     display: none;
 } */
-.login-box, .ER,.ED,.CD,.BR{
-    width: 400px !important;
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    padding: 50px;
-    border-radius: 15px;
-    background-color: rgb(46,54,85);
-    -webkit-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
-    -moz-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
-    box-shadow: 15px 30px 30px 0px rgba(0, 0, 0, 0.75) !important;
+.login-box,
+.ER,
+.ED,
+.CD,
+.BR {
+	width: 400px !important;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+	padding: 50px;
+	border-radius: 15px;
+	background-color: rgb(46, 54, 85);
+	-webkit-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
+	-moz-box-shadow: 15px 30px 30px 30px rgba(0, 0, 0, 0.75) !important;
+	box-shadow: 15px 30px 30px 0px rgba(0, 0, 0, 0.75) !important;
 }
-.register-box{
-    padding: 10px 40px;
-}
-
-.register-box h1{
-    color: white;
-    float: left;
-    font-size: 30px;
-    border-bottom: 6px solid;
-    margin-bottom: 0px;
-    padding: 13px;
-
-}
-.login-box h1{
-    color: white;
-    float: left;
-    font-size: 40px;
-    border-bottom: 6px solid;
-    margin-bottom: 50px;
-    padding: 13px;
-}
-.login_text, .register_text{
-    color: rgba(247,56,89);
-    font-size: 12px;
-    padding: -10px 0px;
-    margin: -10px 0px;
-}
-.textbox{
-    width: 100%;
-    overflow: hidden;
-    font-size: 20px;
-    padding: 8px 0;
-    margin: 8px 0;
-    border-bottom: 1px solid;
-}
-.textbox i{
-    width: 26px;
-    float: left;
-    text-align: center;
-}
-.textbox input{
-    border: none;
-    outline: none;
-    background: none;
-    color: white;
-    font-size: 18px;
-    width: 80%;
-    float: left;
-    margin: 0 10px;
-}
-.btn{
-    width: 100%;
-    /* background: none; */
-    border: 2px;
-    border-radius: 10px;
-    color: #fff;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 20px 0;
-    background-color: rgba(247,56,89,.5);
-    transition: 0.5s ease-in-out;
-}
-input::placeholder{
-    color: whitesmoke;
-}
-.btn:hover{
-    /* color: rgb(247,56,89); */
-    /* color: rgb(46,54,85); */
-    color:#fff;
-    background-color: rgba(247,56,89,1);
+.register-box {
+	padding: 10px 40px;
 }
 
-.bk-btn{
-    margin: 10px !important;
-    padding: 10px !important;
-    width: 50px !important;
+.register-box h1 {
+	color: white;
+	float: left;
+	font-size: 30px;
+	border-bottom: 6px solid;
+	margin-bottom: 0px;
+	padding: 13px;
 }
-.bk-btn img{
-    opacity: 0.5;
-    transition: 0.5s ease-in-out;
+.login-box h1 {
+	color: white;
+	float: left;
+	font-size: 40px;
+	border-bottom: 6px solid;
+	margin-bottom: 50px;
+	padding: 13px;
 }
-.bk-btn img:hover{
-    opacity: 1;
+.login_text,
+.register_text {
+	color: rgba(247, 56, 89);
+	font-size: 12px;
+	padding: -10px 0px;
+	margin: -10px 0px;
 }
-.CD{
-    display: none;
+.textbox {
+	width: 100%;
+	overflow: hidden;
+	font-size: 20px;
+	padding: 8px 0;
+	margin: 8px 0;
+	border-bottom: 1px solid;
 }
-.ED{
-    display: none;
-    
+.textbox i {
+	width: 26px;
+	float: left;
+	text-align: center;
+}
+.textbox input {
+	border: none;
+	outline: none;
+	background: none;
+	color: white;
+	font-size: 18px;
+	width: 80%;
+	float: left;
+	margin: 0 10px;
+}
+.btn {
+	width: 100%;
+	/* background: none; */
+	border: 2px;
+	border-radius: 10px;
+	color: #fff;
+	padding: 5px;
+	font-size: 18px;
+	cursor: pointer;
+	margin: 20px 0;
+	background-color: rgba(247, 56, 89, 0.5);
+	transition: 0.5s ease-in-out;
+}
+input::placeholder {
+	color: whitesmoke;
+}
+.btn:hover {
+	/* color: rgb(247,56,89); */
+	/* color: rgb(46,54,85); */
+	color: #fff;
+	background-color: rgba(247, 56, 89, 1);
 }
 
-@media screen and (max-width: 548px){
-    body{
-        background-color: rgb(46,54,85);
-        
-    }
-    .login-box,.register-box{
-        -webkit-box-shadow: none !important;
-        -moz-box-shadow: none !important;
-        box-shadow: none !important;
-    }
+.bk-btn {
+	margin: 10px !important;
+	padding: 10px !important;
+	width: 50px !important;
+}
+.bk-btn img {
+	opacity: 0.5;
+	transition: 0.5s ease-in-out;
+}
+.bk-btn img:hover {
+	opacity: 1;
+}
+.CD {
+	display: none;
+}
+.ED {
+	display: none;
+}
+@-webkit-keyframes slideInLeft {
+	from {
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+		visibility: visible;
+	}
+
+	to {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+@keyframes slideInLeft {
+	from {
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+		visibility: visible;
+	}
+
+	to {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+.animate__slideInLeft {
+	-webkit-animation-name: slideInLeft;
+	animation-name: slideInLeft;
+}
+@-webkit-keyframes slideInRight {
+	from {
+		-webkit-transform: translate3d(100%, 0, 0);
+		transform: translate3d(100%, 0, 0);
+		visibility: visible;
+	}
+
+	to {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+@keyframes slideInRight {
+	from {
+		-webkit-transform: translate3d(100%, 0, 0);
+		transform: translate3d(100%, 0, 0);
+		visibility: visible;
+	}
+
+	to {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+}
+.animate__slideInRight {
+	-webkit-animation-name: slideInRight;
+	animation-name: slideInRight;
+}
+@-webkit-keyframes slideOutLeft {
+	from {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+
+	to {
+		visibility: hidden;
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+	}
+}
+@keyframes slideOutLeft {
+	from {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+
+	to {
+		visibility: hidden;
+		-webkit-transform: translate3d(-100%, 0, 0);
+		transform: translate3d(-100%, 0, 0);
+	}
+}
+.animate__slideOutLeft {
+	-webkit-animation-name: slideOutLeft;
+	animation-name: slideOutLeft;
 }
 
-@media screen and (max-width: 480px){
-    .bk-btn{
-        display: none;
-    }
-    body{
-        background-color: rgb(46,54,85);
-        
-    }
-    .login-box,.register-box{
-        width: 90%;
-        -webkit-box-shadow: none !important;
-        -moz-box-shadow: none !important;
-        box-shadow: none !important;
-    }
+@-webkit-keyframes slideOutRight {
+	from {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+
+	to {
+		visibility: hidden;
+		-webkit-transform: translate3d(100%, 0, 0);
+		transform: translate3d(100%, 0, 0);
+	}
+}
+@keyframes slideOutRight {
+	from {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+
+	to {
+		visibility: hidden;
+		-webkit-transform: translate3d(100%, 0, 0);
+		transform: translate3d(100%, 0, 0);
+	}
+}
+.animate__slideOutRight {
+	-webkit-animation-name: slideOutRight;
+	animation-name: slideOutRight;
+}
+@-webkit-keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+.animate__fadeIn {
+	-webkit-animation-name: fadeIn;
+	animation-name: fadeIn;
+}
+
+@-webkit-keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+	}
+}
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+	}
+}
+.animate__fadeOut {
+	-webkit-animation-name: fadeOut;
+	animation-name: fadeOut;
+}
+
+@media screen and (max-width: 548px) {
+	body {
+		background-color: rgb(46, 54, 85);
+	}
+	.login-box,
+	.register-box {
+		-webkit-box-shadow: none !important;
+		-moz-box-shadow: none !important;
+		box-shadow: none !important;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.bk-btn {
+		display: none;
+	}
+	body {
+		background-color: rgb(46, 54, 85);
+	}
+	.login-box,
+	.register-box {
+		width: 90%;
+		-webkit-box-shadow: none !important;
+		-moz-box-shadow: none !important;
+		box-shadow: none !important;
+	}
 }
