--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,7 +14,7 @@
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
-  --primary: #4e73df;
+  --primary: rgb(46, 54, 85);
   --secondary: #858796;
   --success: #1cc88a;
   --info: #36b9cc;
@@ -149,7 +149,7 @@ sup {
 }
 
 a {
-  color: #4e73df;
+  color: rgb(46, 54, 85);
   text-decoration: none;
   background-color: transparent;
 }
@@ -2245,8 +2245,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .btn-primary:hover {
@@ -2261,8 +2261,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2516,14 +2516,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #4e73df;
-  border-color: #4e73df;
+  color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2531,15 +2531,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #4e73df;
+  color: rgb(46, 54, 85);
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2773,7 +2773,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #4e73df;
+  color: rgb(46, 54, 85);
   text-decoration: none;
 }
 
@@ -3072,7 +3072,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3425,8 +3425,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #4e73df;
-  background-color: #4e73df;
+  border-color: rgb(46, 54, 85);
+  background-color: rgb(46, 54, 85);
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3490,8 +3490,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #4e73df;
-  background-color: #4e73df;
+  border-color: rgb(46, 54, 85);
+  background-color: rgb(46, 54, 85);
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3716,7 +3716,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3747,7 +3747,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3781,7 +3781,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3920,7 +3920,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
 }
 
 .nav-fill .nav-item {
@@ -4585,7 +4585,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #4e73df;
+  color: rgb(46, 54, 85);
   background-color: #fff;
   border: 1px solid #dddfeb;
 }
@@ -4618,8 +4618,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .page-item.disabled .page-link {
@@ -4702,7 +4702,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5013,7 +5013,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #4e73df;
+  background-color: rgb(46, 54, 85);
   transition: width 0.6s ease;
 }
 
@@ -5103,8 +5103,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: rgb(46, 54, 85);
+  border-color: rgb(46, 54, 85);
 }
 
 .list-group-horizontal {
@@ -6194,7 +6194,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #4e73df !important;
+  background-color: rgb(46, 54, 85) !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6322,7 +6322,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #4e73df !important;
+  border-color: rgb(46, 54, 85) !important;
 }
 
 .border-secondary {
@@ -9353,7 +9353,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #4e73df !important;
+  color: rgb(46, 54, 85) !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9658,7 +9658,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #2e3655;
-  /* background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%); */
+  /* background-image: linear-gradient(180deg, rgb(46, 54, 85) 10%, #224abe 100%); */
   background-size: cover;
 }
 
@@ -9798,11 +9798,11 @@ a:focus {
 }
 
 .border-left-primary {
-  border-left: 0.25rem solid #4e73df !important;
+  border-left: 0.25rem solid rgb(46, 54, 85) !important;
 }
 
 .border-bottom-primary {
-  border-bottom: 0.25rem solid #4e73df !important;
+  border-bottom: 0.25rem solid rgb(46, 54, 85) !important;
 }
 
 .border-left-secondary {
@@ -9988,8 +9988,8 @@ a:focus {
 }
 
 .topbar .dropdown-list .dropdown-header {
-  background-color: #4e73df;
-  border: 1px solid #4e73df;
+  background-color: rgb(46, 54, 85);
+  border: 1px solid rgb(46, 54, 85);
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #fff;
@@ -10151,7 +10151,7 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
-  color: #4e73df;
+  color: #F73859;
   font-weight: 700;
 }
 
@@ -10972,7 +10972,7 @@ form.user .btn-user {
   content: attr(data-text);
   position: absolute;
   left: -2px;
-  text-shadow: 1px 0 #4e73df;
+  text-shadow: 1px 0 rgb(46, 54, 85);
   top: 0;
   color: #5a5c69;
   background: #f8f9fc;
